# zig

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/zig/: brackets.scm  config.toml  debugger.scm  highlights.scm  indents.scm  outline.scm  runnables.scm  tasks.json  textobjects.scm
src/: config.rs  labels.rs  util.rs  zig.rs  zigscient.rs
