[package]
name = "zed_zig"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/zig.rs"

[dependencies]
hex = "0.4.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
uuid = { version = "1.23.1", features = ["v4"] }
zed_extension_api = "0.7.0"
